--- a/src/main/java/com/crm/qa/config/config.properties
+++ b/src/main/java/com/crm/qa/config/config.properties
@@ -1,6 +1,6 @@
 url = https://www.freecrm.com
 
-username = ketankardile25@gmail.com
-password = Moneyheist@2914
+username = ketankardile25@gmail.com1
+password = Moneyheist@2914123
 
 browser = chrome
